2003-06-18  Andras Varga

	* TODO: should not generate set...ArraySize() methods for abstract 
	arrays. Tkenv doesn't really need them and seems like
	they're in the way.

	* TODO: should *not* generate impl of copy ctor in .._Base class

2003-06-16  ------ omnetpp-2.3 released ------

2003-06-16  Andras Varga

	* opp_msgc: messages (cMessage subclasses) now accept message kind
	as second, optional parameter to constructor.

2003-05-01  Andras Varga

	* opp_msgc fix: perl in RedHat 9 (rpm 5.8.0-88) is broken, it doesn't 
	recognize the [^\s] construct in regexps. Workaround: replaced [^\s]
	with [^ \t\r\n].

2003-03-19  Andras Varga

	* opp_msgc: accept, but (since imports are not yet supported) ignore 
	the -I flag

2003-03-15  ------ omnetpp-2.3b2 released ------

2003-02-15  ------ omnetpp-2.3b1 released ------

2003-02-14  Andras Varga

	* nedc: no limit on ned file line length

2003-01-30  Andras Varga

	* added handling of new MathFunc4Args

2003-01-22  Andras Varga

	* jar_expr.c: adopted to increased type safety of cFunctionType

2003-01-04  Andras Varga

	* opp_msgc: added support for cplusplus {{ ... }} syntax

	* opp_msgc: 'cobject <classname>' syntax changed to 'class <classname>',
	'noncobject <classname>' changed to 'class noncobject <classname>'.

2002-12-22  Andras Varga

	* jar.c: zero module vector size crashed network setup code. Temprarily,
	check_module_count() changed to make zero size an error. This will
	be fixed in nedtool: zero size should be allowed and properly handled.

2002-12-07  Andras Varga

	* msgc.pl was renamed opp_msgc, and now it gets copied to the bin/ 
	directory; an opp_msgc.cmd was also added for Windows' sake

	* files for opp_msgc should now have .msg suffix -- nedcwrapper.sh 
	removed

	* msgtest.ned renamed to example.msg

2002-11-23  Andras Varga

	* jar_expr.c: fixed bug which caused generated code to crash if
	user-supplied math function (i.e. its cFunctionType object) 
	was not found 

2002-11-04  Andras Varga
